@@ -47,7 +47,7 @@ Multi-Arch: allowed
 Priority: optional
 Depends: python3.9 (= ${binary:Version}),
  python-pip-whl (>= 8.1.0-2),
- python3-distutils,
+ python3.9-distutils,
  ${shlibs:Depends}, ${misc:Depends},
 Breaks: python3-pip (<< 1.5.6-4)
 Description: Interactive high-level object-oriented language (pyvenv binary, version 3.9)
@@ -234,3 +234,25 @@ Description: Debug Build of the Python Interpreter (version 3.9)
  - Debug information for standard python extensions.
  .
  See the README.debug for more information.
+
+Package: python3.9-full
+Architecture: any
+Multi-Arch: allowed
+Depends: python3.9 (= ${binary:Version}),
+  libpython3.9-testsuite,
+  python3.9-venv (= ${binary:Version}),
+  idle-python3.9,
+  python3.9-distutils,
+  python3.9-gdbm,
+  python3.9-lib2to3,
+  python3.9-tk,
+  ca-certificates,
+  ${shlibs:Depends}, ${misc:Depends}
+Recommends: python3.9-doc, python3.9-examples,
+Suggests: python3.9-dev
+Description: Python Interpreter with all built modules (version 3.9)
+ This is a dependency package, depending on the Python 3.9 interpreter, and
+ all modules included in the standard library (all batteries included).
+ .
+ According to the Debian Python policy, this package must not be used in build
+ dependencies, dependencies and recommendations.
