@@ -47,7 +47,7 @@ Multi-Arch: allowed
 Priority: @PRIO@
 Depends: @PVER@ (= ${binary:Version}),
  python-pip-whl (>= 8.1.0-2),
- python3-distutils,
+ @PVER@-distutils,
  ${shlibs:Depends}, ${misc:Depends},
 Breaks: python3-pip (<< 1.5.6-4)
 Description: Interactive high-level object-oriented language (pyvenv binary, version @VER@)
@@ -234,3 +234,25 @@ Description: Debug Build of the Python Interpreter (version @VER@)
  - Debug information for standard python extensions.
  .
  See the README.debug for more information.
+
+Package: @PVER@-full
+Architecture: any
+Multi-Arch: allowed
+Depends: @PVER@ (= ${binary:Version}),
+  lib@PVER@-testsuite,
+  @PVER@-venv (= ${binary:Version}),
+  idle-@PVER@,
+  @PVER@-distutils,
+  @PVER@-gdbm,
+  @PVER@-lib2to3,
+  @PVER@-tk,
+  ca-certificates,
+  ${shlibs:Depends}, ${misc:Depends}
+Recommends: @PVER@-doc, @PVER@-examples,
+Suggests: @PVER@-dev
+Description: Python Interpreter with all built modules (version @VER@)
+ This is a dependency package, depending on the Python @VER@ interpreter, and
+ all modules included in the standard library (all batteries included).
+ .
+ According to the Debian Python policy, this package must not be used in build
+ dependencies, dependencies and recommendations.
