@@ -261,6 +261,7 @@ p_doc	:= $(PVER)-doc
 p_dbg	:= $(PVER)-dbg
 p_udeb	:= $(PVER)-udeb
 p_venv	:= $(PVER)-venv
+p_full	:= $(PVER)-full
 
 p_lbase	:= lib$(PVER)-stdlib
 p_lmin	:= lib$(PVER)-minimal
@@ -279,6 +280,7 @@ d_doc	:= debian/$(p_doc)
 d_dbg	:= debian/$(p_dbg)
 d_udeb	:= debian/$(p_udeb)
 d_venv	:= debian/$(p_venv)
+d_full	:= debian/$(p_full)
 
 d_lbase	:= debian/$(p_lbase)
 d_lmin	:= debian/$(p_lmin)
@@ -1409,7 +1411,7 @@ binary-arch: build-arch install
 	-dh_icons -a || dh_iconcache -a
 #	dh_installmime -a
 	dh_installchangelogs -a
-	for i in $(p_dev) $(p_dbg) $(p_venv); do \
+	for i in $(p_dev) $(p_dbg) $(p_venv) $(p_full); do \
 	  rm -rf debian/$$i/usr/share/doc/$$i; \
 	  ln -s $(p_base) debian/$$i/usr/share/doc/$$i; \
 	done
